--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coreutils",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "coreutils",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/dancali/node-coreutils",
   "dependencies": {
+    "chalk": "^1.1.1",
     "colors": "^1.1.2",
     "moment": "^2.10.6",
     "util": "^0.10.3"
