--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "chalk": "^1.1.1",
     "colors": "^1.1.2",
+    "fs-extra": "^3.0.1",
     "moment": "^2.10.6",
     "util": "^0.10.3"
   }
