--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "chalk": "^1.1.1",
     "colors": "^1.1.2",
     "fs-extra": "^3.0.1",
+    "got": "^6.7.1",
     "moment": "^2.10.6",
+    "tar": "^3.1.3",
     "util": "^0.10.3"
   }
 }
