--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coreutils",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "coreutils",
   "main": "index.js",
   "scripts": {
@@ -23,6 +23,7 @@
     "got": "^6.7.1",
     "moment": "^2.10.6",
     "tar": "^3.1.3",
+    "tar-fs": "^1.15.2",
     "util": "^0.10.3"
   }
 }
