--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coreutils",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "description": "coreutils",
   "main": "index.js",
   "scripts": {
@@ -24,6 +24,7 @@
     "moment": "^2.10.6",
     "tar": "^3.1.3",
     "tar-fs": "^1.15.2",
+    "tar-stream": "^1.5.4",
     "util": "^0.10.3"
   }
 }
