--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coreutils",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "coreutils",
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,7 @@
     "fs-extra": "^3.0.1",
     "got": "^6.7.1",
     "moment": "^2.10.6",
+    "shelljs": "^0.7.7",
     "tar": "^3.1.3",
     "tar-fs": "^1.15.2",
     "tar-stream": "^1.5.4",
